# gigaschool

./: .env.example  .gitignore  README.md  docker-compose.yml
server/: .dockerignore  ARCHITECTURE.md  Dockerfile  pyproject.toml
server/src/: config.example.yml  example_usage.py  gigaschool.db  main.py  prompts.yml  worker.py
server/src/config/: Config.py
server/src/core/: document.py  query.py  transaction.py  user.py  wallet.py
server/src/core/models/: __init__.py  document_status.py  query_history_item.py  query_status.py  transaction.py  transaction_history_item.py  transaction_status.py  transaction_type.py  user_role.py  validation_result.py
server/src/core/services/: QdrantService.py  RabbitMQService.py  RerankerService.py  СhunksService.py
server/src/database/: engine.py
server/src/database/models/: __init__.py  document_model.py  query_model.py  transaction_model.py  user_model.py  wallet_model.py
server/src/database/repositories/: __init__.py  base_repository.py  document_repository.py  query_repository.py  transaction_repository.py  user_repository.py  wallet_repository.py
server/src/endpoints/: dependencies.py
server/src/endpoints/api/: __init__.py  (+5 more)
server/src/models/: __init__.py  document.py  document_status.py  query.py  query_status.py  transaction.py  transaction_status.py  transaction_type.py  user.py  user_role.py  validation_result.py
server/src/services/: LLMService.py
server/src/utils/: init_db.py  seed_demo_data.py  test_system.py
server/tests/: conftest.py  test_auth.py  test_query.py  test_transaction.py  test_user.py
(+27 files in other folders)
