[project]
name = "gigacshool"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PyMuPDF>=1.24.0",
    "graypy>=2.1.0",
    "PyYAML>=6.0.2",
    "openai>=1.108.0",
    "jinja2>=3.1.0",
    "qdrant_client>=1.15.1",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.20",
    "tiktoken>=0.11.0",
    "openpyxl>=3.1.5",
]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
